Added 'Add File' to Client view

--- a/IndividualLendingGeneralJavaScript/resources/global-translations/messages.properties
+++ b/IndividualLendingGeneralJavaScript/resources/global-translations/messages.properties
@@ -141,6 +141,7 @@ dialog.button.adjust.loan.repayment=Adjust
 dialog.button.loan.waive=Waive
 
 dialog.button.add.note=Add note
+dialog.button.add.file=Add file
 label.client.account.name=Name:
 label.client.account.branch=Branch:
 label.client.account.joinedon=Joined on:
